# python-project-lvl2

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: lint.yml  test.yml
gendiff/: __init__.py  gendiff.py  generate_diff.py
gendiff/differ/: Difference.py  differ.py  loader.py  parser.py
gendiff/formatter/: json.py  plain.py  render.py  stylish.py
gendiff/scripts/: gendiff.py  get_diff.py
tests/: file_loader.py  functions.py
tests/fixtures/: not_plain_test2_example1.json  not_plain_test2_example2.json  render_plain_result1.txt
tests/gendiff/: test_gendiff.py
tests/gendiff/differ/: test_differ.py  test_loader.py  test_parser.py
tests/gendiff/formatter/: test_json.py  test_plain.py
